<resources>
    <string name="app_name">Cartly</string>

    <!--    Login Group String (English) -->
    <string name="title_log_in_page_en">Log in to your account.</string>
    <string name="sub_title_log_in_page_en">Please Log in to your account.</string>
    <string name="title_user_name_en">User Name</string>
    <string name="title_phone_en">Phone Number</string>
    <string name="hint_enter_phone_en">Enter your phone number</string>
    <string name="warning_enter_your_phone_en">Please enter your phone.</string>
    <string name="warning_enter_username_en">Please enter your username.</string>
    <string name="warning_verify_your_username_en">Please verify your username.</string>
    <string name="hint_enter_username_en">Enter your username</string>
    <string name="title_password_en">Password</string>
    <string name="title_confirm_password_en">Confirm Password</string>
    <string name="hint_enter_password_en">Enter your password</string>
    <string name="hint_re_enter_password_en">Re-enter your password</string>
    <string name="warning_enter_password_en">Please enter your password.</string>
    <string name="warning_re_enter_password_en">Please re-enter your password.</string>
    <string name="warning_verify_your_password_en">Please verify your password.</string>
    <string name="forgot_your_password_en">Forgot your password?</string>
    <string name="title_login_en">Login</string>
    <string name="btn_log_in_en">Log in</string>
    <string name="dont_have_an_account_yet_en">Don\'n have an account yet?</string>
    <string name="sign_up_en">Sign up</string>
    //สมัครสมาชิก
    <string name="login_successful_en">Login successful!</string>
    <string name="login_successful_detail_en">Login successful! Welcome to Cartly. Start exploring our products and enjoy a great shopping experience!</string>
    <string name="btn_lets_enjoy_en">Let\'s Enjoy!</string>
    <string name="log_in_again_en">Log in again.</string>
    <string name="sign_in_failed_en">Sign-in Failed.</string>
    <string name="sign_in_failed_detail_en">We couldn\'t sign you in. Please check your username and password and try again.</string>

    <!--    Sign up group String (English) -->
    <string name="title_sign_up_page_en">Create Your Account</string>
    <string name="sub_title_sign_up_en">Join us and start your shopping journey. </string>
    <string name="title_email_en">Email</string>
    <string name="warning_enter_email_en">Please enter your email.</string>
    <string name="enter_your_email_en">Enter your email</string>
    <string name="title_first_name_en">First Name</string>
    <string name="enter_your_first_name_en">Enter your first name</string>
    <string name="warning_enter_your_first_name_en">Please enter your first name.</string>
    <string name="title_last_name_en">Last Name</string>
    <string name="enter_your_last_name_en">Enter your last name</string>
    <string name="warning_enter_your_last_name_en">Please enter your last name.</string>
    <string name="title_policy_en">I agree with</string>
    <string name="btn_term_of_service_en">term of service</string>
    <string name="and_en">and</string>
    <string name="btn_policy_en">privacy policy</string>
    <string name="successfully_signed_up_en">Successfully Signed up!</string>
    <string name="successfully_signed_up_detail_en">Welcome to Cartly! Your account has been created successfully. Please sign in to discover quality products and enjoy your shopping experience.</string>
    <string name="already_have_an_account_en">Already have an account?</string>
    <string name="unable_to_create_your_account_en">Unable to create your account.</string>
    <string name="unable_to_create_account_something_went_wrong_en">Something went wrong while creating your account. Please check your information and try again.</string>
    <string name="try_again_en">Try Again</string>
    <string name="unable_to_create_account_username_dup_en">This username is already taken. Please choose another username and try again.</string>
    <string name="unable_to_create_account_email_dup_en">This email is already registered. Please use a difference email address or sign in to your existing account.</string>
    <string name="please_make_sure_all_required_fields_en">Please make sure all required fields are completed and try again.</string>

    <!--    Bottom Nav Group -->
    <string name="home_page_en">HOME</string>
    <string name="cart_page_en">CART</string>
    <string name="store_page_en">STORE</string>
    <string name="profile_page_en">PROFILE</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Setting Group -->
    <string name="profile_title_en">Profile</string>
    <string name="profile_personal_data_en">Personal Data</string>
    <string name="profile_settings_en">Settings</string>
    <string name="profile_extra_card_en">Extra Card</string>
    <string name="profile_support_title_en">Support</string>
    <string name="profile_support_help_center_en">Help Center</string>
    <string name="profile_support_request_acc_en">Request Account Deletion</string>
    <string name="profile_support_add_acc_en">Add another account</string>
    <string name="sign_out_en">Sign Out</string>

    <!--    Market Group -->
    <string name="search_en">Search</string>
    <string name="market_title_en">FIND PRODUCTS.</string>
    <string name="description_title_en">Description</string>
    <string name="add_to_cart_en">Add to Cart</string>
    <string name="my_product_en">My Product</string>
    <string name="see_all_en">See All</string>
    <string name="my_order_en">My Order</string>
    <string name="add_product_en">Add Product</string>
    <string name="order_empty_en">ORDER EMPTY.</string>
    <string name="all_product_en">ALL PRODUCT.</string>
    <string name="follow_en">FOLLOW</string>
    <string name="hot_sale_en">HOT SALE</string>
    <string name="find_by_category_en">FIND BY CATEGORY</string>
    <string name="update_status_order_en">Update Status Order</string>

    <!--    Add Product Group -->
    <string name="product_name_en">Product Name</string>
    <string name="hint_product_name_en">Enter product name</string>
    <string name="warning_product_name_en">Please enter product name.</string>
    <string name="description_en">Description</string>
    <string name="warning_description_en">Please enter description.</string>
    <string name="hint_description_en">Enter description</string>
    <string name="product_price_en">Price</string>
    <string name="add_img_product_en">Add Image Product</string>
    <string name="baht_en">BAHT</string>
    <string name="edit_product_en">Edit Product</string>
    <string name="save_en">Save</string>
    <string name="success_en">SUCCESS!</string>
    <string name="edit_success_en">Edit Product Success.</string>
    <string name="fail_en">FAIL!</string>
    <string name="edit_fail_en">Edit Fail, Please Check Again.</string>
    <string name="add_success_en">Add Product Success.</string>
    <string name="add_fail_en">Add Fail, Please Check Again.</string>
    <string name="order_en">ORDER.</string>
    <string name="load_more_en">Load more...</string>

    <string name="edit_en">EDIT</string>
    <string name="shopping_cart_en">SHOPPING CART</string>
    <string name="select_all_en">Select All</string>
    <string name="total_en">Total</string>
    <string name="check_out_en">Check Out</string>
    <string name="payment_en">PAYMENT</string>
    <string name="payment_detail_en">Payment Details</string>
    <string name="merchandise_subtotal_en">Merchandise Subtotal</string>
    <string name="shipping_subtotal">Shipping Subtotal</string>
    <string name="voucher_discount">Voucher Discount</string>
    <string name="total_payment">Total payment</string>

    <string name="status_order_en">STATUS ORDER</string>

    <!--    App version-->
    <string name="version_en">Version 1.0.0</string>
</resources>

























