<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/cream">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="20dp">
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_log_in_page_en"
                android:fontFamily="@font/adlamdisplay_regular"
                android:textColor="@color/ink"
                android:textSize="28sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tvSubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvTitle"
                android:layout_marginTop="10dp"
                android:text="@string/sub_title_log_in_page_en"
                android:fontFamily="@font/adlamdisplay_regular"
                android:textSize="14sp"
                android:textColor="@color/muted"/>

<!--            Layout Enter Username-->
            <RelativeLayout
                android:id="@+id/UserNameLayout"
                android:layout_below="@id/tvSubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tvTitleUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/title_user_name_en"
                    android:fontFamily="@font/adlamdisplay_regular"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@color/muted"/>
                <RelativeLayout
                    android:id="@+id/warningUserNameLayout"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_alignParentEnd="true">
                    <ImageView
                        android:id="@+id/mvWarningUserName"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_marginHorizontal="4dp"
                        android:src="@drawable/icon_warning_yellow"/>
                    <TextView
                        android:id="@+id/tvWarningUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/mvWarningUserName"
                        android:text="@string/warning_enter_username_en"
                        android:fontFamily="@font/adlamdisplay_regular"
                        android:textSize="14sp"
                        android:textColor="@color/yellow"/>
                </RelativeLayout>

                <EditText
                    android:id="@+id/edtEnterUserName"
                    android:layout_below="@id/tvTitleUserName"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginTop="10dp"
                    android:paddingHorizontal="20dp"
                    android:inputType="text"
                    android:hint="@string/hint_enter_username_en"
                    android:fontFamily="@font/adlamdisplay_regular"
                    android:textSize="14sp"
                    android:textColor="@color/ink"
                    android:textColorHint="@color/muted"
                    android:background="@drawable/bg_input"/>
            </RelativeLayout>

<!--            Layout Enter Password-->
            <RelativeLayout
                android:id="@+id/PasswordLayout"
                android:layout_below="@id/UserNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/tvTitlePassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:text="@string/title_password_en"
                    android:fontFamily="@font/adlamdisplay_regular"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/muted"/>
                <RelativeLayout
                    android:id="@+id/warningPasswordLayout"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:layout_alignParentEnd="true">
                    <ImageView
                        android:id="@+id/mvWarningPassword"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_marginHorizontal="4dp"
                        android:src="@drawable/icon_warning_yellow"/>
                    <TextView
                        android:id="@+id/tvWarningPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/mvWarningPassword"
                        android:text="@string/warning_enter_password_en"
                        android:fontFamily="@font/adlamdisplay_regular"
                        android:textSize="14sp"
                        android:textColor="@color/yellow"/>
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/buttonPasswordLayout"
                    android:layout_below="@id/tvTitlePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/edtEnterPassword"
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
                        android:paddingHorizontal="20dp"
                        android:inputType="textPassword"
                        android:hint="@string/hint_enter_password_en"
                        android:fontFamily="@font/adlamdisplay_regular"
                        android:textSize="14sp"
                        android:textColor="@color/ink"
                        android:textColorHint="@color/muted"
                        android:background="@drawable/bg_input"/>
                    <ImageView
                        android:id="@+id/btnShowPassword"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginHorizontal="20dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/icon_eye_slash"/>
                </RelativeLayout>
                <TextView
                    android:id="@+id/btnForgotPassword"
                    android:layout_below="@id/buttonPasswordLayout"
                    android:layout_alignParentEnd="true"
                    android:layout_marginVertical="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_your_password_en"
                    android:fontFamily="@font/adlamdisplay_regular"
                    android:textSize="14sp"
                    android:textColor="@color/ink"/>
            </RelativeLayout>

<!--            Button Login Layout-->
            <RelativeLayout
                android:id="@+id/btnLogInLayout"
                android:layout_below="@id/PasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/mvLogIn"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:background="@drawable/bg_sage"/>
                <TextView
                    android:id="@+id/tvLogIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/btn_log_in_en"
                    android:textColor="@color/ink"
                    android:fontFamily="@font/adlamdisplay_regular"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
            </RelativeLayout>

<!--            Layout Sign up -->
            <RelativeLayout
                android:id="@+id/signUpLayout"
                android:layout_below="@+id/btnLogInLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true">
                    <TextView
                        android:id="@+id/tvSignUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dont_have_an_account_yet_en"
                        android:fontFamily="@font/adlamdisplay_regular"
                        android:textSize="14sp"
                        android:textColor="@color/ink"/>
                    <TextView
                        android:id="@+id/btnSignUp"
                        android:layout_toEndOf="@id/tvSignUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:text="@string/sign_up_en"
                        android:textColor="@color/ink"
                        android:fontFamily="@font/adlamdisplay_regular"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>

<!--        Alert Log in Layout-->
        <RelativeLayout
            android:id="@+id/alertLogInLayout"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <include layout="@layout/layout_alert_login"
                android:id="@+id/alertLogin"/>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>