<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_overlay"
    android:id="@+id/alertLogInLayout">
    <ProgressBar
        android:id="@+id/progressBarAlertLogin"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerInParent="true"/>

<!--    Alert Log in Successful-->
    <RelativeLayout
        android:id="@+id/alertLogInSuccessfully"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="492dp"
        android:padding="20dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/background_alert_bottom">
        <RelativeLayout
            android:id="@+id/alertDetailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
            <ImageView
                android:id="@+id/mvAlertLoginSuccessful"
                android:layout_width="203dp"
                android:layout_height="168dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:src="@drawable/icon_successfully"/>
            <TextView
                android:id="@+id/tvAlertTitleSuccessful"
                android:layout_below="@id/mvAlertLoginSuccessful"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/login_successful_en"
                android:fontFamily="@font/adlamdisplay_regular"
                android:textSize="24sp"
                android:textColor="@color/ink"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tvAlertDetailSuccessful"
                android:layout_below="@id/tvAlertTitleSuccessful"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_centerHorizontal="true"
                android:text="@string/login_successful_detail_en"
                android:fontFamily="@font/adlamdisplay_regular"
                android:textSize="14sp"
                android:textColor="@color/muted"
                android:textAlignment="center"/>

            <RelativeLayout
                android:id="@+id/btnLetsEnjoyLayout"
                android:layout_below="@id/tvAlertDetailSuccessful"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
                <ImageView
                    android:id="@+id/mvStart"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:background="@drawable/background_button_active_yellow"/>
                <TextView
                    android:id="@+id/tvStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/btn_lets_enjoy_en"
                    android:fontFamily="@font/adlamdisplay_regular"
                    android:textColor="@color/card"
                    android:textSize="14sp"
                    android:textStyle="bold"/>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

<!--    Alert Log in Failed-->
    <RelativeLayout
        android:id="@+id/alertLogInFailed"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="492dp"
        android:padding="20dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/background_alert_bottom">
        <RelativeLayout
            android:id="@+id/alertLogInFailedDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
            <ImageView
                android:id="@+id/mvAlertLogInFailed"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:src="@drawable/icon_warning_yellow"/>
            <TextView
                android:id="@+id/tvAlertLogInFailedTitle"
                android:layout_below="@id/mvAlertLogInFailed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/sign_in_failed_en"
                android:fontFamily="@font/adlamdisplay_regular"
                android:textSize="24sp"
                android:textColor="@color/ink"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tvAlertLogInFailedDetail"
                android:layout_below="@id/tvAlertLogInFailedTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_centerHorizontal="true"
                android:text="@string/sign_in_failed_detail_en"
                android:fontFamily="@font/adlamdisplay_regular"
                android:textSize="14sp"
                android:textColor="@color/muted"
                android:textAlignment="center"/>
            <RelativeLayout
                android:id="@+id/btnLogInAgainLayout"
                android:layout_below="@+id/tvAlertLogInFailedDetail"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="20dp">
                <ImageView
                    android:id="@+id/mvLoginAgain"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:background="@drawable/background_button_active_yellow"/>
                <TextView
                    android:id="@+id/tvLogInAgain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/log_in_again_en"
                    android:fontFamily="@font/adlamdisplay_regular"
                    android:textSize="14sp"
                    android:textColor="@color/card"
                    android:textStyle="bold"/>
            </RelativeLayout>
            <TextView
                android:id="@+id/btnForgotPassword"
                android:layout_below="@+id/btnLogInAgainLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/forgot_your_password_en"
                android:fontFamily="@font/adlamdisplay_regular"
                android:textSize="14sp"
                android:textColor="@color/ink"/>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>