<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/alertSignUpLayout"
    android:background="@drawable/background_overlay">

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="visible"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerInParent="true"/>

<!--    Alert Sign-up Success Layout -->
    <RelativeLayout
        android:id="@+id/alertSignUpSuccess"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="492dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/background_alert_bottom"
        android:padding="20dp">
        <RelativeLayout
            android:id="@+id/alertSignUpSuccessDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
            <ImageView
                android:id="@+id/mvAlertSignUpSuccess"
                android:layout_width="203dp"
                android:layout_height="168dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/icon_successfully"
                android:layout_marginBottom="20dp"/>
            <TextView
                android:id="@+id/tvAlertTitleSignUpSuccess"
                android:layout_below="@+id/mvAlertSignUpSuccess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/successfully_signed_up_en"
                android:textSize="24sp"
                android:textColor="@color/ink"
                android:textStyle="bold"
                android:fontFamily="@font/adlamdisplay_regular"/>
            <TextView
                android:id="@+id/tvAlertDetailSignUpSuccess"
                android:layout_below="@id/tvAlertTitleSignUpSuccess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_centerHorizontal="true"
                android:text="@string/successfully_signed_up_detail_en"
                android:textSize="14sp"
                android:textColor="@color/muted"
                android:textAlignment="center"
                android:fontFamily="@font/adlamdisplay_regular"/>
            <RelativeLayout
                android:id="@+id/btnLogInAgainLayout"
                android:layout_below="@id/tvAlertDetailSignUpSuccess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
                <ImageView
                    android:id="@+id/mvLoginAgain"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:background="@drawable/bg_sage"/>
                <TextView
                    android:id="@+id/tvLogInAgain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/btn_log_in_en"
                    android:fontFamily="@font/adlamdisplay_regular"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/ink"/>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

<!--    Alert Sign-up Failed Layout-->
    <RelativeLayout
        android:id="@+id/alertSignUpFailed"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="492dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/background_alert_bottom"
        android:padding="20dp">
        <RelativeLayout
            android:id="@+id/alertWarningSignUpFailDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
            <ImageView
                android:id="@+id/mvAlertSignUpFailed"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/icon_warning_yellow"
                android:layout_marginBottom="20dp"/>
            <TextView
                android:id="@+id/tvAlertTitleSignUpFail"
                android:layout_below="@+id/mvAlertSignUpFailed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/unable_to_create_your_account_en"
                android:textSize="20dp"
                android:textAlignment="center"
                android:textColor="@color/ink"
                android:textStyle="bold"
                android:fontFamily="@font/adlamdisplay_regular"/>
            <TextView
                android:id="@+id/tvAlertDetailSignUpFail"
                android:layout_below="@+id/tvAlertTitleSignUpFail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="20dp"
                android:text="@string/unable_to_create_account_something_went_wrong_en"
                android:textSize="14sp"
                android:textAlignment="center"
                android:textColor="@color/muted"
                android:fontFamily="@font/adlamdisplay_regular"/>
            <RelativeLayout
                android:id="@+id/btnTryAgainLayout"
                android:layout_below="@id/tvAlertDetailSignUpFail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
                <ImageView
                    android:id="@+id/mvTryAgain"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:background="@drawable/bg_sage"/>
                <TextView
                    android:id="@+id/tvTryAgain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/try_again_en"
                    android:textSize="16sp"
                    android:textColor="@color/ink"
                    android:textStyle="bold"
                    android:fontFamily="@font/adlamdisplay_regular"/>
            </RelativeLayout>
            <TextView
                android:id="@+id/tvBtnLoginWarning"
                android:visibility="visible"
                android:layout_below="@id/btnTryAgainLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_log_in_en"
                android:textSize="16sp"
                android:textColor="@color/muted"
                android:fontFamily="@font/adlamdisplay_regular"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>